moves components folder under app folder

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -1,5 +1,6 @@
-$text_color: #ff0bac;
-$job_title: #00bec5;
+$color-font-onDark: #ffffff;
+$color-font-onLight: #000000;
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -19,7 +20,7 @@ body {
 }
 
 body {
-  color: $text_color;
+  color: $color-font-onDark;
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
