adds some data logic and a bit of styling

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -1,5 +1,10 @@
 $color-font-onDark: #ffffff;
 $color-font-onLight: #000000;
+$color-maize: #fde74c;
+$color-aero: #5bc0eb;
+$color-yellow-green: #9bc53d;
+$color-persian-red: #c3423f;
+$color-raisin: #211a1e;
 
 :root {
   --background: #ffffff;
