--- a/src/app/components/JobCard/JobCard.module.scss
+++ b/src/app/components/JobCard/JobCard.module.scss
@@ -1,5 +1,19 @@
+$rejected-job: #c3423f;
+
+$active-job: #5bc0eb;
+
 .jobCard {
+  color: #211a1e;
   margin: 10px;
   padding: 10px;
-  border: 3px solid #00bec5;
+  border: 3px solid $active-job;
+  border-radius: 2px;
+  background-color: lighten($active-job, 20%);
+}
+
+.jobCard button {
+  border: 2px solid $active-job;
+  border-radius: 1px;
+  margin: 5px;
+  padding: 5px;
 }
