--- a/src/app/components/JobStatistics/JobStats.module.css
+++ b/src/app/components/JobStatistics/JobStats.module.css
@@ -1,5 +1,8 @@
 .jobStats {
-  border: 3px solid purple;
+  width: 40%;
+  color: var(--foreground);
+  background-color: var(--primary-light);
+  border: 3px solid var(--primary-dark);
   margin: 10px;
   padding: 10px;
 }
