--- a/src/app/components/Job/Job.module.css
+++ b/src/app/components/Job/Job.module.css
@@ -1,4 +1,4 @@
-.jobCard {
+.job {
   color: var(--primary);
   margin: 10px;
   padding: 10px;
@@ -7,7 +7,7 @@
   background-color: var(--secondary-content);
 }
 
-.jobCard button {
+.job button {
   border: 2px solid var(--secondary);
   border-radius: 2px;
   margin: 5px;
